Sanitize public demo for interview showcase