@@ -1,12 +1,18 @@
-# Java HTTP Adapter for QueryUserProfile
+# Java HTTP Adapter
 
-当前前端 demo 是静态前端 + Node 本地服务，不能直接引入 Maven/KRPC 依赖。这里补了一个最小 Java HTTP Adapter 工程：
+这个目录是画像资产平台 Demo 的后端适配层示例。
 
-前端 demo -> Node server.js -> Java HTTP Adapter -> KRPC QueryUserProfile
+前端页面不能直接依赖企业内部服务协议，因此这里用一个轻量 Java HTTP Adapter 做中转：
 
-## 本地先跑通 HTTP 层
+```text
+前端页面 -> Node API -> Java HTTP Adapter -> 企业内部画像查询服务
+```
 
-默认是 mock client，可以先验证 Java HTTP 层是否通：
+公开版本只保留通用工程结构和 mock 能力，不在文档中暴露任何真实服务名、内部注册信息、私有依赖或访问凭据。
+
+## 本地启动
+
+默认启动 mock client，用于验证 HTTP 层是否可用：
 
 ```bash
 cd java-rpc-adapter
@@ -25,23 +31,38 @@ GET http://127.0.0.1:8081/api/health
 POST http://127.0.0.1:8081/api/queryUserProfile
 ```
 
-请求体：
+示例请求：
 
 ```json
 {
   "user_role": 2,
-  "user_id": "1839980743",
+  "user_id": "1000000001",
   "context": {
-    "biz_code": "business_platform"
+    "biz_code": "demo"
   }
 }
 ```
 
-## 让现有前端连 Java Adapter
+字段约定：
 
-另开一个终端启动当前 demo：
+```text
+user_role=1 商家
+user_role=2 普通用户
+```
+
+## 和前端联调
+
+先启动 Adapter：
 
 ```bash
+cd java-rpc-adapter
+sh start.sh
+```
+
+再启动根目录 Demo，并让 Node 代理到 Adapter：
+
+```bash
+cd ..
 QUERY_USER_PROFILE_HTTP_URL="http://127.0.0.1:8081/api/queryUserProfile" PORT=8090 sh start.sh
 ```
 
@@ -51,65 +72,23 @@ QUERY_USER_PROFILE_HTTP_URL="http://127.0.0.1:8081/api/queryUserProfile" PORT=80
 http://127.0.0.1:8090
 ```
 
-此时前端点「查询画像」，会先到 Node，再转发到 Java Adapter。
+此时页面里的「画像查询」会先到 Node，再由 Node 转发到 Java Adapter。
 
-## 切真实 KRPC
+## 如何替换为真实后端
 
-当前工程通过 `krpc` profile 创建 KRPC client，核心调用代码在：
+真实项目中，可以在 Adapter 内部替换 `UserProfileClient` 的实现，把 HTTP 请求转换为实际后端服务需要的请求格式。
 
-```text
-src/main/java/com/kuaishou/demo/profile/adapter/client/KrpcUserProfileClient.java
-```
-
-实际调用的 stub 和方法是：
-
-```java
-AdAiStudioUserProfileServiceGrpc.AdAiStudioUserProfileServiceFutureClient#queryUserProfile
-```
-
-对应服务注册配置在 `src/main/resources/application.yml`：
-
-```yaml
-profile:
-  adapter:
-    krpc:
-      biz-def: AD_INDUSTRY_INFRA_AIGC
-      biz-name: ad-industry-infra-aigc-studio-serivce
-      registry-name: ad-industry-ai-studio-center
-      disable-auto-grpc-prefix: true
-      division: staging
-```
-
-依赖版本：
-
-```xml
-<dependency>
-  <groupId>kuaishou</groupId>
-  <artifactId>ad-industry-ai-studio-center-client</artifactId>
-  <version>1.0.234</version>
-</dependency>
-```
-
-启动真实 KRPC profile：
-
-```bash
-mvn spring-boot:run \
-  -Dspring-boot.run.profiles=krpc \
-  -Dspring-boot.run.jvmArguments="--add-exports=java.base/sun.net.util=ALL-UNNAMED"
-```
-
-`--add-exports` 是为了兼容当前 KRPC 依赖在 Java 17 下访问 JDK 内部网络工具类的行为。
-
-HTTP 请求会被转换成 `QueryUserProfileRequest`：
+建议保持对前端稳定的 HTTP 契约：
 
 ```text
-context.biz_code = business_platform
-user_role = 1 商家 / 2 普通用户
-user_id = 商家ID / 用户ID
+POST /api/queryUserProfile
 ```
 
-## 排查提示
+这样无论后端是 RPC、REST、网关还是其他内部协议，前端都不需要改动。
 
-- `rpc.connSuccess.ad-industry-ai-studio-center` 表示 KRPC 连接成功。
-- `rpc.succ.ad-industry-ai-studio-center.queryUserProfile` 表示 `queryUserProfile` 调用成功返回。
-- 如果返回 `success` 但画像字段为空，通常需要服务端确认当前 division、biz_code、权限和测试 ID 是否能命中真实画像数据。
+## 面试讲解点
+
+- 为什么需要 Adapter：隔离浏览器和内部服务协议。
+- 为什么保留 mock：保证公开 Demo 不依赖私有环境，也能完整演示。
+- 为什么 Node 也做一层代理：统一前端同源 API，避免跨域和环境差异。
+- 如何扩展：替换 `UserProfileClient` 实现即可接入真实画像服务。
